--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <!-- <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
-        <li><button onclick="logout()">logout</button></li>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Laman Utama</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Tentang Kami</span></a></li>
+        <!-- <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Pelan Warta</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-log-out" onclick="logout()"></i> <span>Log Keluar</span></a></li>
+        <!-- <li><button onclick="logout()">logout</button></li> -->
       </ul>
     </nav><!-- .nav-menu -->
 
