--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- myresume head start -->
 
   <!-- Favicons -->
-  <link href="myresume_assets/img/favicon.png" rel="icon">
+  <!-- <link href="myresume_assets/img/favicon.png" rel="icon"> -->
   <link href="myresume_assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -65,8 +65,8 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Tentang Kami</span></a></li>
         <!-- <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Pelan Warta</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-log-out" onclick="logout()"></i> <span>Log Keluar</span></a></li>
-        <!-- <li><button onclick="logout()">logout</button></li> -->
+        <li><a class="ubah"><i class="bx bx-log-out" onclick="logout()"></i> <span>Log Keluar</span></a></li>
+        <!-- <li><button class="logout-btn" onclick="logout()">logout</button></li> -->
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -178,7 +178,7 @@
               <div class="portfolio-info">
                 <h4>Sempadan Daerah</h4>
                 <div class="portfolio-links">
-                  <a href="index.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="undi.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -190,7 +190,7 @@
               <div class="portfolio-info">
                 <h4>Sempadan Sekolah</h4>
                 <div class="portfolio-links">
-                  <a href="index.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="undi.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -202,7 +202,7 @@
               <div class="portfolio-info">
                 <h4>Sempadan Klinik Kesihatan & Klinik Desa</h4>
                 <div class="portfolio-links">
-                  <a href="index.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="undi.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -214,7 +214,7 @@
               <div class="portfolio-info">
                 <h4>Sempadan Daerah Polis</h4>
                 <div class="portfolio-links">
-                  <a href="index.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="undi.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
               <div class="portfolio-info">
                 <h4>Sempadan Simpanan Hutan</h4>
                 <div class="portfolio-links">
-                  <a href="index.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="undi.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
